/**
 *  Host Manager API
 */


syntax = "proto3";

package peloton.hostmgr;

option go_package = "hostmgr";

// import "mesos/v1/mesos.proto";
// import "peloton/changelog/changelog.proto";

/**
 *  Host Manager service interface
 */
service HostService
{
  // Get current cluster available resource.
  rpc GetResources(GetResourcesRequest) returns (GetResourcesResponse);
}

message MesosUnavailable {
  string reason = 1;
}

message GetResourcesRequest {
  /**
   * A list of resource names.
   */
  repeated string resources = 1;
}

message GetResourcesResponse {
  message Resource {
    string name = 1;
    double available = 2;
  }

  repeated Resource resources = 1;

  MesosUnavailable mesosUnavailable = 2;
}